--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "buddy-app",
   "scripts": {
-    "bootstrap": "lerna bootstrap --use-workspaces",
+    "postinstall": "lerna bootstrap",
     "start": "lerna run start --parallel --stream",
     "coverage": "lerna run coverage --parallel --stream",
     "lint": "lerna run lint --parallel --stream",
-    "build": "lerna run build --parallel --stream"
+    "build-client": "lerna exec yarn build --scope @buddy-app/client",
+    "end2end": "lerna exec yarn cy:ci --scope @buddy-app/client",
+    "lighthouse": "lerna exec yarn lighthouse --scope @buddy-app/client"
   },
   "private": true,
   "workspaces": {
