--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ cache:
   yarn: true
   directories:
     - node_modules
+    - packages/client/node_modules
 before_install:
   - yarn global add codecov
 script:
