--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ cache:
     - ~/.cache
 before_install:
   - yarn global add codecov
+  - yarn global add cypress
 script:
   - yarn lint
   - yarn coverage
