--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,11 @@ cache:
   directories:
     - node_modules
     - ~/.cache
+    - ~/.npm
 before_install:
   - yarn global add codecov
-  - yarn global add cypress
+install:
+  - yarn install --frozen-lockfile
 script:
   - yarn lint
   - yarn coverage
