--- a/.travis.yml
+++ b/.travis.yml
@@ -10,13 +10,18 @@ cache:
   yarn: true
   directories:
     - node_modules
+    - ~/.cache
+    - ~/.npm
 before_install:
   - yarn global add codecov
+install:
+  - yarn install --frozen-lockfile
 script:
   - yarn lint
   - yarn coverage
-  - yarn end2end
-  - yarn build-client
+  - cd packages/client
+  - yarn cy:ci
+  - yarn build
   - yarn lighthouse
 after_success:
   - codecov --token="$CODECOV_TOKEN"
