--- a/.travis.yml
+++ b/.travis.yml
@@ -6,16 +6,13 @@ addons:
   apt:
     packages:
       - libgconf-2-4
-cache:
-  yarn: true
-  directories:
-    - node_modules
-    - ~/.cache
-    - ~/.npm
+cache: yarn
 before_install:
   - yarn global add codecov
 install:
   - yarn install --frozen-lockfile
+  - yarn cypress install
+  - yarn cypress verify
 script:
   - yarn lint
   - yarn coverage
