[BUD-295] Add client deploy script

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,19 +26,15 @@ after_success:
 notifications:
   slack: $SLACK_TOKEN
 deploy:
-  - provider: s3
-    access_key_id: $AWS_ACCESS_KEY
-    secret_access_key: $AWS_SECRET_ACCESS_KEY
-    bucket: "buildit-poland-buddy-app"
-    region: eu-west-1
-    local_dir: packages/client/build
-    acl: public_read
+  # deploy client
+    - provider: script
+    script: bash packages/client/deploy.sh
     edge: true
     on:
       branch: master
   # deploy services
   - provider: script
-    script: bash packages/services/deploy.sh prod
+    script: bash packages/services/deploy.sh
     edge: true
     on:
       branch: master
