--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -13,6 +13,7 @@
     "lint": "eslint ./src/**/*.{ts,tsx}",
     "lint:fix": "eslint ./src/**/*.{ts,tsx} --fix",
     "build": "react-scripts build",
+    "deploy": "serverless",
     "test": "react-scripts test",
     "cy:open": "cypress open",
     "cy:run": "cypress run --browser chrome",
@@ -69,6 +70,7 @@
     "prettier": "^1.19.1",
     "react-hook-form": "^4.9.6",
     "react-test-renderer": "^16.12.0",
+    "serverless": "^1.64.1",
     "start-server-and-test": "^1.10.8",
     "wait-for-expect": "^3.0.2",
     "webpack": "^4.41.6",
