[BUD-295] Set up dev env for services

--- a/packages/services/prisma/prisma.yml
+++ b/packages/services/prisma/prisma.yml
@@ -1,7 +1,7 @@
 # Specifies the HTTP endpoint of your Prisma API.
 #endpoint: ''
 #endpoint:
-endpoint: ${env:PRISMA_ENDPOINT}
+endpoint: ${env:PRISMA_ENDPOINT}/${env:PRISMA_STAGE}
 
 # Defines your models, each model is mapped to the database as a table.
 datamodel: datamodel.prisma
@@ -18,5 +18,3 @@ generate:
 hooks:
   post-deploy:
     - prisma generate
-seed:
-  run: ts-node prisma/seed.ts
