--- a/packages/services/package.json
+++ b/packages/services/package.json
@@ -27,6 +27,7 @@
     "graphql": "^14.6.0",
     "graphql-yoga": "^1.18.3",
     "jsonwebtoken": "^8.5.1",
+    "node-ses": "^2.2.1",
     "prisma": "^1.34.10",
     "prisma-client-lib": "^1.34.10"
   },
