--- a/packages/services/package.json
+++ b/packages/services/package.json
@@ -29,7 +29,8 @@
     "jsonwebtoken": "^8.5.1",
     "node-ses": "^2.2.1",
     "prisma": "^1.34.10",
-    "prisma-client-lib": "^1.34.10"
+    "prisma-client-lib": "^1.34.10",
+    "tslib": "^1.11.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -44,7 +45,6 @@
     "source-map-support": "^0.5.16",
     "ts-loader": "^6.2.1",
     "ts-node": "8.6.2",
-    "tslib": "^1.10.0",
     "typescript": "^3.7.5",
     "webpack": "^4.41.6",
     "webpack-node-externals": "^1.7.2"
