Use asw-sdk instead of node-ses

--- a/packages/services/serverless.yml
+++ b/packages/services/serverless.yml
@@ -4,7 +4,7 @@ provider:
   name: aws
   runtime: nodejs12.x
   stage: ${opt:stage, 'dev'}
-  region: ${opt:region, 'eu-west-1'}
+  region: ${opt:region, ${env:AWS_REGION}}
   apiGateway:
     minimumCompressionSize: 1024 # Enable gzip compression for responses > 1 KB
   environment:
