--- a/packages/client/serverless.yml
+++ b/packages/client/serverless.yml
@@ -5,6 +5,6 @@ myWebsite:
     code:
       src: ./build
       hook: yarn build
-    region: eu-west-1
+    region: ${env.AWS_REGION}
     bucketName: ${env.REACT_APP_BUCKET}
     domain: ${env.REACT_APP_DOMAIN}
