--- a/packages/services/package.json
+++ b/packages/services/package.json
@@ -23,11 +23,11 @@
   "dependencies": {
     "@buddy-app/schema": "file:../schema",
     "apollo-errors": "^1.9.0",
+    "aws-sdk": "^2.656.0",
     "bcryptjs": "^2.4.3",
     "graphql": "^14.6.0",
     "graphql-yoga": "^1.18.3",
     "jsonwebtoken": "^8.5.1",
-    "node-ses": "^2.2.1",
     "prisma": "^1.34.10",
     "prisma-client-lib": "^1.34.10",
     "tslib": "^1.11.1"
@@ -35,6 +35,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/jsonwebtoken": "^8.3.7",
+    "@types/node": "^13.11.1",
     "dotenv": "^8.2.0",
     "fork-ts-checker-webpack-plugin": "^4.0.3",
     "serverless": "^1.65.0",
