--- a/packages/services/serverless.yml
+++ b/packages/services/serverless.yml
@@ -14,6 +14,10 @@ provider:
     PRISMA_SECRET: ${env:PRISMA_SECRET}
     APP_SECRET: ${env:APP_SECRET}
     API_GATEWAY_DOMAIN: ${env:API_GATEWAY_DOMAIN}
+    AWS_ACCESS_KEY_ID: ${env:AWS_ACCESS_KEY_ID}
+    AWS_SECRET_ACCESS_KEY: ${env:AWS_SECRET_ACCESS_KEY}
+    AWS_REGION: ${env:AWS_REGION}
+    EMAIL: ${env:EMAIL}
   profile: default
 package:
   excludeDevDependencies: true
