Update env names

--- a/packages/services/serverless.yml
+++ b/packages/services/serverless.yml
@@ -14,9 +14,9 @@ provider:
     PRISMA_SECRET: ${env:PRISMA_SECRET}
     APP_SECRET: ${env:APP_SECRET}
     API_GATEWAY_DOMAIN: ${env:API_GATEWAY_DOMAIN}
-    AWS_ACCESS_KEY_ID: ${env:AWS_ACCESS_KEY_ID}
-    AWS_SECRET_ACCESS_KEY: ${env:AWS_SECRET_ACCESS_KEY}
-    AWS_REGION: ${env:AWS_REGION}
+    ACCESS_KEY: ${env:AWS_ACCESS_KEY_ID}
+    SECRET_KEY: ${env:AWS_SECRET_ACCESS_KEY}
+    REGION: ${env:AWS_REGION}
     EMAIL: ${env:EMAIL}
   profile: default
 package:
