--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -31,6 +31,10 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.43",
     "apollo-boost": "^0.4.7",
+    "apollo-cache-persist": "^0.1.1",
+    "apollo-link-queue": "^2.2.0",
+    "apollo-link-retry": "^2.2.16",
+    "apollo-link-serialize": "^3.1.1",
     "dompurify": "^2.0.8",
     "react": "16.12.0",
     "react-dom": "16.12.0",
