--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
+    "@buddy-app/schema": "0.1.0",
     "@buildit/gravity-particles": "^0.6.1",
     "@material-ui/core": "^4.9.3",
     "@material-ui/icons": "^4.9.1",
@@ -36,6 +37,7 @@
     "apollo-link-retry": "^2.2.16",
     "apollo-link-serialize": "^3.1.1",
     "dompurify": "^2.0.8",
+    "localforage": "^1.7.4",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-html-parser": "^2.0.2",
